# slack-content-gateway-safety

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
app/: __init__.py  config.py  logging_config.py  main.py  schemas.py
app/classifier/: __init__.py  base.py  embeddings.py  keyword.py  llm.py  pipeline.py
app/slack/: __init__.py  bolt_app.py  handlers.py  warnings.py
k8s/: configmap.yaml  deployment.yaml  kustomization.yaml  service.yaml
tests/: conftest.py  test_classifier_keyword.py  test_classifier_llm.py  test_classifier_pipeline.py  test_main.py  test_schemas.py  test_slack_handlers.py  test_slack_warnings.py
